--- a/app/assets/stylesheets/partials/_structure.scss
+++ b/app/assets/stylesheets/partials/_structure.scss
@@ -41,7 +41,7 @@
 	@include home-box($white);
 	display: block;
 	padding: 3em;
-	margin: 0 -16px 0.6em -16px;
+	margin: -20px -16px 0.6em -16px;
 
 	h1 {
 		font-weight: 100 !important;
